--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "NODE_ENV=development tsx server/index.ts",
-    "build": "node build-wrapper.cjs",
+    "build": "node -e \"globalThis.crypto = globalThis.crypto || {}; globalThis.crypto.getRandomValues = globalThis.crypto.getRandomValues || require('crypto').randomFillSync;\" ./node_modules/.bin/vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "test:filestorage": "node --experimental-modules test-file-storage.js"
