--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "NODE_ENV=development node -e \"globalThis.crypto = globalThis.crypto || {}; globalThis.crypto.getRandomValues = globalThis.crypto.getRandomValues || require('crypto').randomFillSync;\" ./node_modules/.bin/tsx server/index.ts",
+    "dev": "NODE_ENV=development node --loader ts-node/esm --experimental-specifier-resolution=node --import ./crypto-polyfill.js server/index.ts",
     "build": "node -e \"globalThis.crypto = globalThis.crypto || {}; globalThis.crypto.getRandomValues = globalThis.crypto.getRandomValues || require('crypto').randomFillSync;\" ./node_modules/.bin/vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
@@ -94,7 +94,7 @@
     "esbuild": "^0.25.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
-    "tsx": "^4.19.1",
+    "ts-node": "^10.9.1",
     "typescript": "5.6.3",
     "vite": "^5.4.14"
   },
